# Quorum

./: .env.example  .gitignore  README.md  config.example.toml  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-04-24-r1-1-unified-metadata-index.md
docs/superpowers/specs/: 2026-04-24-quorum-v2-design.md  2026-04-24-roadmap-features-design.md
scripts/: manual_movies.py  setup-windows-amd.ps1  test_ollama.py
src/quorum/: __main__.py  backup.py  cli.py  collections.py  config.py  db.py  dedup.py  enrich.py  enrich_photos.py  events.py  extract.py  feedback_loop.py  gui.py  home_videos.py  notify.py  ollama_client.py  onnx_helpers.py  organize.py  organize_anything.py  photos.py  pipeline.py  rename_folders.py  rules.py  search.py  tmdb.py  triage.py  watch.py
src/quorum/engine/: __init__.py  plugin.py  runner.py
src/quorum/plugins/: audio.py  desktop.py  docs.py  downloads.py  email_import.py  music.py  projects.py  scan_recovery.py
src/quorum/signals/: base.py  filename.py  fingerprint.py  ocr.py  screen.py  transcript.py  vision.py
src/quorum/web/: app.py  jobs.py
src/quorum/web/static/: style.css
src/quorum/web/templates/: base.html  commands.html  dashboard.html  dedup.html  events.html  faces.html  library.html  logs.html  review.html  search.html  settings.html
tests/: conftest.py  test_audio.py  test_backup.py  test_cli_db.py  test_cross_media.py  test_db.py  test_dedup.py  test_desktop.py  test_docs.py  test_downloads.py  test_email_import.py  test_engine.py  test_events.py  test_feedback_loop.py  test_music.py  test_notify.py  test_organize_anything.py  test_projects.py  test_rules.py  test_scan_recovery.py  test_screen_detect.py
