[project]
name = "quorum"
version = "0.1.0"
description = "Multi-signal video identification and Plex-compliant renaming for messy libraries."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jeff Sardella" }]
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "rich>=13.7",
    "python-dotenv>=1.0",
    # Bundled ffmpeg binary so users don't need to install it system-wide.
    "imageio-ffmpeg>=0.5",
    # Whisper transcription, pip-installable, auto-downloads models.
    # CPU-only on AMD Windows (CTranslate2 has no ROCm backend). For GPU on AMD,
    # use the optional whisper.cpp backend with its Vulkan build.
    "faster-whisper>=1.1",
    # Photos mode: EXIF reading + HEIC (iPhone) support.
    "pillow>=10.0",
    "pillow-heif>=0.18",
]

[project.scripts]
quorum = "quorum.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quorum"]

[tool.ruff]
line-length = 110
target-version = "py311"
