[project]
name = "quorum"
version = "0.1.0"
description = "Multi-signal video identification and Plex-compliant renaming for messy libraries."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jeff Sardella" }]
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "rich>=13.7",
    "python-dotenv>=1.0",
    # Bundled ffmpeg binary so users don't need to install it system-wide.
    "imageio-ffmpeg>=0.5",
    # Whisper transcription, pip-installable, auto-downloads models.
    # CPU-only on AMD Windows (CTranslate2 has no ROCm backend). For GPU on AMD,
    # use the optional whisper.cpp backend with its Vulkan build.
    "faster-whisper>=1.1",
    # Photos mode: EXIF reading + HEIC (iPhone) support.
    "pillow>=10.0",
    "pillow-heif>=0.18",
    # Optional GUI (quorum gui). customtkinter bundles its own themed widgets
    # over tkinter (which ships with Python on Windows).
    "customtkinter>=5.2",
    # OCR signal: PaddleOCR via ONNX Runtime (no PyTorch dependency)
    "paddleocr>=2.7",
    # Audio fingerprinting (wraps Chromaprint via fpcalc binary)
    "pyacoustid>=1.3",
    # Face embedding for enrich-photos (ONNX Runtime backend)
    "insightface>=0.7",
    "onnxruntime>=1.17",
    # Watch-folder daemon
    "watchdog>=4.0",
    # Web UI
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    # Vector embeddings extension for SQLite
    "sqlite-vec>=0.1",
    # Perceptual hashing for image deduplication
    "imagehash>=4.3",
    # Music tag reading for music organization plugin
    "mutagen>=1.47",
    # Document text extraction for document organization plugin
    "pdfplumber>=0.10",
    "python-docx>=1.0",
    # Scanned photo recovery: image analysis for border/deskew detection
    "opencv-python-headless>=4.8",
]

[project.optional-dependencies]
directml = ["onnxruntime-directml>=1.17"]
test = ["pytest>=8.0"]

[project.scripts]
quorum = "quorum.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quorum"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"
